tests/vertical-slice/reject/builtin_payload_enum_inequality_result.hew
fn main() {
    let ok: Result<i64, i64> = Ok(1);
    let err: Result<i64, i64> = Err(2);
    let _ = ok != err;
}
